feat: Limit permissions

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -98,7 +98,7 @@
     
     <h2>Contact</h2>
     <p>
-      If you have any questions about this privacy policy or the Rapid Reader extension, please open an issue on our GitHub repository.
+      If you have any questions about this privacy policy or the Rapid Reader extension, please open an issue on our <a href="https://github.com/ClaysonIO/rapid-reader-extension">GitHub repository</a>.
     </p>
   </div>
   
