feat: Add light/dark mode

--- a/popup.html
+++ b/popup.html
@@ -39,6 +39,15 @@
       <p id="word-count">Words: 0</p>
     </div>
     
+    <div class="theme-selector">
+      <label for="theme-select">Theme:</label>
+      <select id="theme-select">
+        <option value="light">Light</option>
+        <option value="dark">Dark</option>
+        <option value="system">System Default</option>
+      </select>
+    </div>
+    
     <div class="footer">
       <p><a href="privacy_policy.html" target="_blank">Privacy Policy</a> | <a href="https://github.com/ClaysonIO/rapid-reader-extension" target="_blank">Open Source</a></p>
     </div>
