feat: Add content to privacy policy. Remove unecessary demo page. Update readme

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -74,8 +74,10 @@
       The extension requires the following permissions:
     </p>
     <ul>
-      <li><strong>activeTab</strong>: To access the currently active tab to retrieve the text you've selected</li>
-      <li><strong>scripting</strong>: To execute scripts that retrieve your selected text</li>
+      <li><strong>Active Tab</strong>: To access the currently active tab to retrieve the text you've selected</li>
+      <li><strong>Scripting</strong>: To execute scripts that retrieve your selected text</li>
+      <li><strong>Storage</strong>: To store your most recent WPM, and your light mode/dark mode settings</li>
+      <li><strong>Context Menu</strong>: To add a shortcut when you right-click on text in your browser</li>
     </ul>
     <p>
       These permissions are used solely for the functionality of the extension and not for data collection.
@@ -83,12 +85,13 @@
     
     <h2>Open Source</h2>
     <p>
-      Rapid Reader is open-source software. This means:
+      Rapid Reader is open-source software, licensed under the MIT license. This means:
     </p>
     <ul>
       <li>The complete source code is publicly available for review</li>
       <li>Anyone can verify that the extension behaves as described in this privacy policy</li>
       <li>The community can contribute to improving the extension</li>
+      <li>Anyone can 'fork' the extension to create their own</li>
     </ul>
     
     <h2>Changes to This Privacy Policy</h2>
@@ -103,7 +106,7 @@
   </div>
   
   <div class="footer">
-    <p>Last updated: February 25, 2025</p>
+    <p>Last updated: February 26, 2025</p>
     <p><a href="index.html">Back to Home</a></p>
   </div>
 </body>
