--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
         
         <div class="links">
           <a href="https://github.com/ClaysonIO/rapid-reader-extension" class="btn" target="_blank">GitHub Repository</a>
-          <a href="#" class="btn btn-secondary">Chrome Extension (Coming Soon)</a>
+          <a href="https://chromewebstore.google.com/detail/rapid-reader/fpkhljdlihlmlnakajkljmdfamefgcap" class="btn btn-secondary">Chrome Extension</a>
         </div>
       </div>
     </header>
